# aavart

./: Anchor.toml
app/: package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  main.tsx
app/src/lib/: idl.json  idl.ts  program.ts
app/src/screens/: CreatePool.tsx  Dashboard.tsx  Home.tsx  JoinPool.tsx
programs/aavart/: Cargo.toml
programs/aavart/src/: lib.rs
tests/: aavart.ts
